# SuteraVR

./: .gitattributes  .gitmodules  Cargo.toml  FUNDING.yml  LICENSE  README.md  README_JP.md  RightHandAnchor.gd  main.tscn  openxr_action_map.tres  project.godot  shapell.fbx.import  shapell.glb.import  shapell.tscn  shapell_parts.fbx  shapell_parts.fbx.import  shell.nix
.github/workflows/: balancing-server-checker.yml  client-rust-checker.yml  clocking-server-checker.yml  conventional-pr-title.yml  social-server-checker.yml  suteravr-lib-checker.yml
.godot/: global_script_class_cache.cfg
.godot/editor/: editor_layout.cfg  filesystem_cache8  main.tscn-folding-3ad5c15c4f3250da0cc7c1af1770d85f.cfg  project_metadata.cfg
.godot/imported/: Hand_Glove_L.gltf-ac6c06fe48ca0d7ce0f9faffd177a897.md5  Hand_Glove_L.gltf-ac6c06fe48ca0d7ce0f9faffd177a897.scn  Hand_Glove_R.gltf-0e99922c663867da8d37af9597ab1ce8.md5  Hand_Glove_R.gltf-0e99922c663867da8d37af9597ab1ce8.scn  Hand_Glove_low_L.gltf-7b94b12c0dff159d494da6cafd52895d.md5  Hand_Glove_low_L.gltf-7b94b12c0dff159d494da6cafd52895d.scn  Hand_Glove_low_R.gltf-c32907596b2287c95aff0e704780ef3d.md5  Hand_Glove_low_R.gltf-c32907596b2287c95aff0e704780ef3d.scn  Hand_Nails_L.gltf-22452b307072e9d363b1f547e2b6a365.md5  Hand_Nails_L.gltf-22452b307072e9d363b1f547e2b6a365.scn  Hand_Nails_R.gltf-35869d6a39400588d95465aa5e3b528d.md5  Hand_Nails_R.gltf-35869d6a39400588d95465aa5e3b528d.scn  Hand_Nails_low_L.gltf-60d8096917582bfe1d760ff1ad173fc8.md5  Hand_Nails_low_L.gltf-60d8096917582bfe1d760ff1ad173fc8.scn  Hand_Nails_low_R.gltf-7d9fc9507def4b4fd9c10cdae7aa6e11.md5  Hand_Nails_low_R.gltf-7d9fc9507def4b4fd9c10cdae7aa6e11.scn  Hand_low_L.gltf-a83bdf9115e4fb62c63deabade61cbbb.md5  Hand_low_L.gltf-a83bdf9115e4fb62c63deabade61cbbb.scn  Hand_low_R.gltf-8b164aff014e5c5bfa2eccc8e40e7e97.md5  Hand_low_R.gltf-8b164aff014e5c5bfa2eccc8e40e7e97.scn  Hold trigger to continue.png-ce0a3a4de13c262f7015326bad2cb09d.md5  african_baseColor.png-c1a63b2c85973a5f7673482d994697e9.md5  african_baseColor.png-c1a63b2c85973a5f7673482d994697e9.s3tc.ctex  african_realistic_baseColor.png-67cf0f3230115c16edbeaf7b76430f7c.md5  african_realistic_baseColor.png-67cf0f3230115c16edbeaf7b76430f7c.s3tc.ctex  audio.svg-20d7f0b624a1b2ef54f1b4d12970c8d0.ctex  audio.svg-20d7f0b624a1b2ef54f1b4d12970c8d0.md5  caucasian_baseColor.png-2ffa4b91e9a1b3bcc11c22eccd941be7.md5  caucasian_baseColor.png-2ffa4b91e9a1b3bcc11c22eccd941be7.s3tc.ctex  caucasian_realistic_baseColor.png-6d28d56c1e76917b749358861074492c.md5  caucasian_realistic_baseColor.png-6d28d56c1e76917b749358861074492c.s3tc.ctex  cleaning_glove_baseColor.png-775896445d04c5f9ecad1dcd0609e336.md5  cleaning_glove_baseColor.png-775896445d04c5f9ecad1dcd0609e336.s3tc.ctex  glove_african_dark_camo.png-3a526d8d251e73995f6fd3ba5cdd0b4e.md5  glove_african_dark_camo.png-3a526d8d251e73995f6fd3ba5cdd0b4e.s3tc.ctex  glove_african_green_camo.png-b4a9e045aac0313108230034e03317fd.md5  (+27 more)
balancing-server/: Cargo.toml
balancing-server/src/: lib.rs  main.rs
client/: project.godot  shapell.tscn
client/Godot/: .gitignore  (+11 more)
client/rust/: Cargo.toml
client/rust/src/: async_driver.rs  async_tester.rs  bin.rs  lib.rs  logger.rs  signal_names.rs  toolik.rs
client/rust/src/tcp/: allow_unknown_cert.rs  conenction.rs  error.rs  mod.rs  requests.rs
clocking-server/: .gitignore  Cargo.toml  certgen.sh
clocking-server/src/: certs.rs  consts.rs  errors.rs  instance.rs  lib.rs  player.rs  serde.rs  server.rs  shutdown.rs  signal.rs  typing.rs  version.rs
clocking-server/src/instance/: manager.rs  mod.rs  player.rs
clocking-server/src/tcp/: certs.rs  mod.rs  parser.rs  requests.rs  stream.rs
docs/: README.md  how_to_contribute_to_SuteraVR.md  how_to_experience_SuteraVR.md
scenes/: LeftHandAnchor.gd  RightHandAnchor.gd  main.tscn
server/: Cargo.toml
social-server/: Cargo.toml
suteravr-lib/: Cargo.toml
suteravr-lib/src/: lib.rs  packet.rs  schema.rs  typing.rs
suteravr-lib/src/clocking/: buffer.rs  event_headers.rs  frame.rs  mod.rs  oneshot_headers.rs  schema_snapshot.rs  sutera_header.rs  sutera_status.rs  traits.rs
suteravr-lib/src/clocking/schemas/: chat_entry.rs  mod.rs
suteravr-lib/src/clocking/schemas/event/: mod.rs  player_move.rs  update_player_being.rs
suteravr-lib/src/clocking/schemas/oneshot/: chat_entry.rs  login.rs  mod.rs
suteravr-lib/src/clocking/snapshots/: suteravr_lib__clocking__schema_snapshot__test__schema_snapshot-2.snap  suteravr_lib__clocking__schema_snapshot__test__schema_snapshot-3.snap  suteravr_lib__clocking__schema_snapshot__test__schema_snapshot-4.snap  suteravr_lib__clocking__schema_snapshot__test__schema_snapshot-5.snap  suteravr_lib__clocking__schema_snapshot__test__schema_snapshot-6.snap  suteravr_lib__clocking__schema_snapshot__test__schema_snapshot.snap
suteravr-lib/src/messaging/: id.rs  mod.rs  player.rs  version.rs
suteravr-lib/src/packet/: header.rs  mod.rs  request_type.rs  semver.rs
suteravr-lib/src/schema/: error.rs  oneshot.rs
suteravr-lib/src/schema/oneshot/: schema_auth.rs  schema_version.rs
suteravr-lib/src/suterpc/: macro_impl.rs  mod.rs  oneshot.rs  oneshot_schema.rs
suteravr-lib/src/typing/: id.rs  player.rs
suteravr-lib/src/util/: logger.rs  mod.rs
(+168 files in other folders)
