[package]
name = "balancing-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.10.1"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
suteravr-lib = { path = "../suteravr-lib" }
