[package]
name = "balancing-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { workspace = true }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }

env_logger = "0.10.1"
log = "0.4.20"

suteravr-lib = { path = "../suteravr-lib" }
tracing = "0.1.40"
http = "1.0.0"

