[package]
name = "clocking-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.0"
log = "0.4.20"
once_cell = "1.19.0"
suteravr-lib = { path = "../suteravr-lib" }
tokio = { version = "1.35.1", features = ["full"] }
