[package]
name = "clocking-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
console-subscriber = "0.2.0"
derivative = "2.2.0"
env_logger = "0.11.0"
log = "0.4.20"
once_cell = "1.19.0"
rustls-pemfile = "2.0.0"
suteravr-lib = { path = "../suteravr-lib" }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tokio-rustls = "0.25.0"
