[package]
name = "suteravr-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alkahest = { version = "0.3.0", features = ["derive"] }
bytes = "1.5.0"
derivative = "2.2.0"
derive-new = "0.6.0"
enum-map = "2.7.3"
env_logger = "0.11.1"
futures = "0.3.30"
log = "0.4.20"
once_cell = "1.19.0"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }

[dev-dependencies]
insta = "1.34.0"
pretty_assertions = "1.4.0"
rstest = "0.18.2"
